@@ -96,7 +96,7 @@ public class ExpressionUtil {
                     .map(s -> evalVariable(s, variable)).filter(Objects::nonNull)
                     .flatMap(List::stream)
                     .distinct()
-                    .collect(Collectors.toList());
+                    .toList();
 
             // 转换办理人，比如设计器中预设了能办理的人，如果其中包含角色或者部门id等，可以通过此接口进行转换成用户id
             PermissionHandler permissionHandler = FlowEngine.permissionHandler();
